// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph gracefully renders a graph with a selected node id that does not exist 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": -7.75,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": -7.75,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    className="startCircle"
    key="0"
    style={
      Object {
        "left": "calc(5px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
</div>
`;

exports[`Graph handles an empty graph 1`] = `
<div
  className="root"
/>
`;

exports[`Graph renders a complex graph with six nodes and seven edges 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 75,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      flipcoin1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 45,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      tails1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="2"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 105,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      heads1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="3"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 45,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 125,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      flipcoin2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="4"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 185,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      heads2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="5"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 85,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 185,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      tails2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 39.57233047033631,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-45deg)",
          "width": 35.85533905932738,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": 32.25,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    key="1"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 74.57233047033631,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-135deg)",
          "width": 35.85533905932738,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": 92.25,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    key="2"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 32.25,
          "top": 82.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": 32.25,
          "top": 107.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    key="3"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 0.375,
          "top": 81.875,
          "transform": "translate(100px, 44px) rotate(-36.86989764584402deg)",
          "width": 44.25,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "left": -10.25,
          "top": 110,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "left": -10.25,
          "top": 140,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 30.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="3"
      style={
        Object {
          "left": -7.75,
          "top": 167.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    key="4"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 45.375,
          "top": 81.875,
          "transform": "translate(100px, 44px) rotate(-143.13010235415598deg)",
          "width": 44.25,
        }
      }
    />
    <div
      className="line"
      key="1"
      style={
        Object {
          "left": 69.75,
          "top": 110,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 30.5,
        }
      }
    />
    <div
      className="line"
      key="2"
      style={
        Object {
          "left": 69.75,
          "top": 140,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 30.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="3"
      style={
        Object {
          "left": 72.25,
          "top": 167.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    key="5"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 32.25,
          "top": 142.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": 5.375,
          "top": 168.125,
          "transform": "translate(100px, 44px) rotate(-36.86989764584402deg)",
          "width": 44.25,
        }
      }
    />
  </div>
  <div
    key="6"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": 46.50406530937789,
          "top": 141.25,
          "transform": "translate(100px, 44px) rotate(-153.43494882292202deg)",
          "width": 61.991869381244214,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": 81.39353635223337,
          "top": 167.5,
          "transform": "translate(100px, 44px) rotate(-56.30993247402021deg)",
          "width": 30.54626062886658,
        }
      }
    />
  </div>
  <div
    className="startCircle"
    key="0"
    style={
      Object {
        "left": "calc(70px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="1"
    style={
      Object {
        "left": "calc(80px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="2"
    style={
      Object {
        "left": "calc(45px - 5px)",
        "top": "calc(70px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="3"
    style={
      Object {
        "left": "calc(40px - 5px)",
        "top": "calc(68.75px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="4"
    style={
      Object {
        "left": "calc(50px - 5px)",
        "top": "calc(68.75px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="5"
    style={
      Object {
        "left": "calc(45px - 5px)",
        "top": "calc(130px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
  <div
    className="startCircle"
    key="6"
    style={
      Object {
        "left": "calc(50px - 5px)",
        "top": "calc(127.5px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
</div>
`;

exports[`Graph renders a graph with a selected node 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode nodeSelected"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": -7.75,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": -7.75,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    className="startCircle"
    key="0"
    style={
      Object {
        "left": "calc(5px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
</div>
`;

exports[`Graph renders a graph with one node 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
</div>
`;

exports[`Graph renders a graph with two connectd nodes 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": -7.75,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": -7.75,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    className="startCircle"
    key="0"
    style={
      Object {
        "left": "calc(5px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
</div>
`;

exports[`Graph renders a graph with two connectd nodes in reverse order 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 65,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    key="0"
  >
    <div
      className="line"
      key="0"
      style={
        Object {
          "left": -7.75,
          "top": 22.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
    <div
      className="line lastEdgeLine"
      key="1"
      style={
        Object {
          "left": -7.75,
          "top": 47.5,
          "transform": "translate(100px, 44px) rotate(-90deg)",
          "width": 25.5,
        }
      }
    />
  </div>
  <div
    className="startCircle"
    key="0"
    style={
      Object {
        "left": "calc(5px - 5px)",
        "top": "calc(10px - 3px)",
        "transform": "translate(100px, 44px)",
      }
    }
  />
</div>
`;

exports[`Graph renders a graph with two disparate nodes 1`] = `
<div
  className="root"
>
  <div
    className="node graphNode"
    key="0"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 5,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node1
    </div>
    <div
      className="icon"
    />
  </div>
  <div
    className="node graphNode"
    key="1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": undefined,
        "left": 65,
        "maxHeight": 10,
        "minHeight": 10,
        "top": 5,
        "width": 10,
      }
    }
  >
    <div
      className="label"
    >
      node2
    </div>
    <div
      className="icon"
    />
  </div>
</div>
`;
